fix scaling on mobile

--- a/docs/connect4/connect4-game.css
+++ b/docs/connect4/connect4-game.css
@@ -35,6 +35,8 @@
 }
 .connect4-container .board {
     cursor: pointer;
+    width: 420px;
+    max-width: 90vw;
 }
 .connect4-container button {
     margin-top: 20px;
